maze.lessons.maze.island.IslandMaze.scala.code
def keepHandOnSideWall = {gauche(); if (!estFaceMur) {avance()} else {while(estFaceMur()) {droite};avance()} }

override def run() { 
  
  
  setDirection(Direction.NORTH)
                            if (!estFaceMur) {avance()} else {keepHandOnSideWall()}
  
  while (!estSurBiscuit()) {keepHandOnSideWall}; prendBiscuit()
}